lab04/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> podprogramy
Rule 2     podprogramy -> podprogramy podprogram
Rule 3     podprogramy -> <empty>
Rule 4     podprogram -> declaration
Rule 5     podprogram -> fundef
Rule 6     podprogram -> instruction
Rule 7     podprogram -> <empty>
Rule 8     declaration -> TYPE inits ;
Rule 9     declaration -> error ;
Rule 10    inits -> inits , init
Rule 11    inits -> init
Rule 12    init -> ID = expression
Rule 13    instructions -> instruction instructions
Rule 14    instructions -> instruction
Rule 15    instruction -> print_instr
Rule 16    instruction -> labeled_instr
Rule 17    instruction -> assignment
Rule 18    instruction -> choice_instr
Rule 19    instruction -> while_instr
Rule 20    instruction -> repeat_instr
Rule 21    instruction -> return_instr
Rule 22    instruction -> break_instr
Rule 23    instruction -> continue_instr
Rule 24    instruction -> compound_instr
Rule 25    instruction -> expression ;
Rule 26    print_instr -> PRINT expr_list ;
Rule 27    print_instr -> PRINT error ;
Rule 28    labeled_instr -> ID : instruction
Rule 29    assignment -> ID = expression ;
Rule 30    choice_instr -> IF ( condition ) instruction
Rule 31    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 32    choice_instr -> IF ( error ) instruction
Rule 33    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 34    while_instr -> WHILE ( condition ) instruction
Rule 35    while_instr -> WHILE ( error ) instruction
Rule 36    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 37    return_instr -> RETURN expression ;
Rule 38    continue_instr -> CONTINUE ;
Rule 39    break_instr -> BREAK ;
Rule 40    units -> units unit
Rule 41    units -> <empty>
Rule 42    unit -> declaration
Rule 43    unit -> instruction
Rule 44    unit -> <empty>
Rule 45    compound_instr -> { units }
Rule 46    condition -> expression
Rule 47    const -> integer
Rule 48    const -> float
Rule 49    const -> string
Rule 50    integer -> INTEGER
Rule 51    float -> FLOAT
Rule 52    string -> STRING
Rule 53    expression -> ID
Rule 54    expression -> const
Rule 55    expression -> expression + expression
Rule 56    expression -> expression - expression
Rule 57    expression -> expression * expression
Rule 58    expression -> expression / expression
Rule 59    expression -> expression % expression
Rule 60    expression -> expression | expression
Rule 61    expression -> expression & expression
Rule 62    expression -> expression ^ expression
Rule 63    expression -> expression AND expression
Rule 64    expression -> expression OR expression
Rule 65    expression -> expression SHL expression
Rule 66    expression -> expression SHR expression
Rule 67    expression -> expression EQ expression
Rule 68    expression -> expression NEQ expression
Rule 69    expression -> expression > expression
Rule 70    expression -> expression < expression
Rule 71    expression -> expression LE expression
Rule 72    expression -> expression GE expression
Rule 73    expression -> ( expression )
Rule 74    expression -> ( error )
Rule 75    expression -> ID ( expr_list_or_empty )
Rule 76    expression -> ID ( error )
Rule 77    expr_list_or_empty -> expr_list
Rule 78    expr_list_or_empty -> <empty>
Rule 79    expr_list -> expr_list , expression
Rule 80    expr_list -> expression
Rule 81    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 82    args_list_or_empty -> args_list
Rule 83    args_list_or_empty -> <empty>
Rule 84    args_list -> args_list , arg
Rule 85    args_list -> arg
Rule 86    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 59
&                    : 61
(                    : 30 31 32 33 34 35 73 74 75 76 81
)                    : 30 31 32 33 34 35 73 74 75 76 81
*                    : 57
+                    : 55
,                    : 10 79 84
-                    : 56
/                    : 58
:                    : 28
;                    : 8 9 25 26 27 29 36 37 38 39
<                    : 70
=                    : 12 29
>                    : 69
AND                  : 63
BREAK                : 39
CONTINUE             : 38
ELSE                 : 31 33
EQ                   : 67
FLOAT                : 51
GE                   : 72
ID                   : 12 28 29 53 75 76 81 86
IF                   : 30 31 32 33
INTEGER              : 50
LE                   : 71
NEQ                  : 68
OR                   : 64
PRINT                : 26 27
REPEAT               : 36
RETURN               : 37
SHL                  : 65
SHR                  : 66
STRING               : 52
TYPE                 : 8 81 86
UNTIL                : 36
WHILE                : 34 35
^                    : 62
error                : 9 27 32 33 35 74 76
{                    : 45
|                    : 60
}                    : 45

Nonterminals, with rules where they appear

arg                  : 84 85
args_list            : 82 84
args_list_or_empty   : 81
assignment           : 17
break_instr          : 22
choice_instr         : 18
compound_instr       : 24 81
condition            : 30 31 34 36
const                : 54
continue_instr       : 23
declaration          : 4 42
expr_list            : 26 77 79
expr_list_or_empty   : 75
expression           : 12 25 29 37 46 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 79 80
float                : 48
fundef               : 5
init                 : 10 11
inits                : 8 10
instruction          : 6 13 14 28 30 31 31 32 33 33 34 35 43
instructions         : 13 36
integer              : 47
labeled_instr        : 16
podprogram           : 2
podprogramy          : 1 2
print_instr          : 15
program              : 0
repeat_instr         : 20
return_instr         : 21
string               : 49
unit                 : 40
units                : 40 45
while_instr          : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . podprogramy
    (2) podprogramy -> . podprogramy podprogram
    (3) podprogramy -> .

    TYPE            reduce using rule 3 (podprogramy -> .)
    error           reduce using rule 3 (podprogramy -> .)
    PRINT           reduce using rule 3 (podprogramy -> .)
    ID              reduce using rule 3 (podprogramy -> .)
    IF              reduce using rule 3 (podprogramy -> .)
    WHILE           reduce using rule 3 (podprogramy -> .)
    REPEAT          reduce using rule 3 (podprogramy -> .)
    RETURN          reduce using rule 3 (podprogramy -> .)
    BREAK           reduce using rule 3 (podprogramy -> .)
    CONTINUE        reduce using rule 3 (podprogramy -> .)
    {               reduce using rule 3 (podprogramy -> .)
    (               reduce using rule 3 (podprogramy -> .)
    INTEGER         reduce using rule 3 (podprogramy -> .)
    FLOAT           reduce using rule 3 (podprogramy -> .)
    STRING          reduce using rule 3 (podprogramy -> .)
    $end            reduce using rule 3 (podprogramy -> .)

    program                        shift and go to state 1
    podprogramy                    shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> podprogramy .
    (2) podprogramy -> podprogramy . podprogram
    (4) podprogram -> . declaration
    (5) podprogram -> . fundef
    (6) podprogram -> . instruction
    (7) podprogram -> .
    (8) declaration -> . TYPE inits ;
    (9) declaration -> . error ;
    (81) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (15) instruction -> . print_instr
    (16) instruction -> . labeled_instr
    (17) instruction -> . assignment
    (18) instruction -> . choice_instr
    (19) instruction -> . while_instr
    (20) instruction -> . repeat_instr
    (21) instruction -> . return_instr
    (22) instruction -> . break_instr
    (23) instruction -> . continue_instr
    (24) instruction -> . compound_instr
    (25) instruction -> . expression ;
    (26) print_instr -> . PRINT expr_list ;
    (27) print_instr -> . PRINT error ;
    (28) labeled_instr -> . ID : instruction
    (29) assignment -> . ID = expression ;
    (30) choice_instr -> . IF ( condition ) instruction
    (31) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (32) choice_instr -> . IF ( error ) instruction
    (33) choice_instr -> . IF ( error ) instruction ELSE instruction
    (34) while_instr -> . WHILE ( condition ) instruction
    (35) while_instr -> . WHILE ( error ) instruction
    (36) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (37) return_instr -> . RETURN expression ;
    (39) break_instr -> . BREAK ;
    (38) continue_instr -> . CONTINUE ;
    (45) compound_instr -> . { units }
    (53) expression -> . ID
    (54) expression -> . const
    (55) expression -> . expression + expression
    (56) expression -> . expression - expression
    (57) expression -> . expression * expression
    (58) expression -> . expression / expression
    (59) expression -> . expression % expression
    (60) expression -> . expression | expression
    (61) expression -> . expression & expression
    (62) expression -> . expression ^ expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression OR expression
    (65) expression -> . expression SHL expression
    (66) expression -> . expression SHR expression
    (67) expression -> . expression EQ expression
    (68) expression -> . expression NEQ expression
    (69) expression -> . expression > expression
    (70) expression -> . expression < expression
    (71) expression -> . expression LE expression
    (72) expression -> . expression GE expression
    (73) expression -> . ( expression )
    (74) expression -> . ( error )
    (75) expression -> . ID ( expr_list_or_empty )
    (76) expression -> . ID ( error )
    (47) const -> . integer
    (48) const -> . float
    (49) const -> . string
    (50) integer -> . INTEGER
    (51) float -> . FLOAT
    (52) string -> . STRING

  ! reduce/reduce conflict for $end resolved using rule 1 (program -> podprogramy .)
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    $end            reduce using rule 1 (program -> podprogramy .)
    TYPE            shift and go to state 36
    error           shift and go to state 34
    PRINT           shift and go to state 9
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 19
    RETURN          shift and go to state 4
    BREAK           shift and go to state 30
    CONTINUE        shift and go to state 32
    {               shift and go to state 35
    (               shift and go to state 14
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 3
    STRING          shift and go to state 7

  ! TYPE            [ reduce using rule 7 (podprogram -> .) ]
  ! error           [ reduce using rule 7 (podprogram -> .) ]
  ! PRINT           [ reduce using rule 7 (podprogram -> .) ]
  ! ID              [ reduce using rule 7 (podprogram -> .) ]
  ! IF              [ reduce using rule 7 (podprogram -> .) ]
  ! WHILE           [ reduce using rule 7 (podprogram -> .) ]
  ! REPEAT          [ reduce using rule 7 (podprogram -> .) ]
  ! RETURN          [ reduce using rule 7 (podprogram -> .) ]
  ! BREAK           [ reduce using rule 7 (podprogram -> .) ]
  ! CONTINUE        [ reduce using rule 7 (podprogram -> .) ]
  ! {               [ reduce using rule 7 (podprogram -> .) ]
  ! (               [ reduce using rule 7 (podprogram -> .) ]
  ! INTEGER         [ reduce using rule 7 (podprogram -> .) ]
  ! FLOAT           [ reduce using rule 7 (podprogram -> .) ]
  ! STRING          [ reduce using rule 7 (podprogram -> .) ]
  ! $end            [ reduce using rule 7 (podprogram -> .) ]

    float                          shift and go to state 5
    choice_instr                   shift and go to state 6
    repeat_instr                   shift and go to state 11
    return_instr                   shift and go to state 12
    const                          shift and go to state 13
    continue_instr                 shift and go to state 15
    while_instr                    shift and go to state 16
    podprogram                     shift and go to state 17
    string                         shift and go to state 20
    assignment                     shift and go to state 21
    labeled_instr                  shift and go to state 22
    compound_instr                 shift and go to state 23
    declaration                    shift and go to state 24
    integer                        shift and go to state 8
    break_instr                    shift and go to state 27
    instruction                    shift and go to state 28
    fundef                         shift and go to state 29
    print_instr                    shift and go to state 31
    expression                     shift and go to state 33

state 3

    (51) float -> FLOAT .

    +               reduce using rule 51 (float -> FLOAT .)
    -               reduce using rule 51 (float -> FLOAT .)
    *               reduce using rule 51 (float -> FLOAT .)
    /               reduce using rule 51 (float -> FLOAT .)
    %               reduce using rule 51 (float -> FLOAT .)
    |               reduce using rule 51 (float -> FLOAT .)
    &               reduce using rule 51 (float -> FLOAT .)
    ^               reduce using rule 51 (float -> FLOAT .)
    AND             reduce using rule 51 (float -> FLOAT .)
    OR              reduce using rule 51 (float -> FLOAT .)
    SHL             reduce using rule 51 (float -> FLOAT .)
    SHR             reduce using rule 51 (float -> FLOAT .)
    EQ              reduce using rule 51 (float -> FLOAT .)
    NEQ             reduce using rule 51 (float -> FLOAT .)
    >               reduce using rule 51 (float -> FLOAT .)
    <               reduce using rule 51 (float -> FLOAT .)
    LE              reduce using rule 51 (float -> FLOAT .)
    GE              reduce using rule 51 (float -> FLOAT .)
    ;               reduce using rule 51 (float -> FLOAT .)
    ,               reduce using rule 51 (float -> FLOAT .)
    )               reduce using rule 51 (float -> FLOAT .)


state 4

    (37) return_instr -> RETURN . expression ;
    (53) expression -> . ID
    (54) expression -> . const
    (55) expression -> . expression + expression
    (56) expression -> . expression - expression
    (57) expression -> . expression * expression
    (58) expression -> . expression / expression
    (59) expression -> . expression % expression
    (60) expression -> . expression | expression
    (61) expression -> . expression & expression
    (62) expression -> . expression ^ expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression OR expression
    (65) expression -> . expression SHL expression
    (66) expression -> . expression SHR expression
    (67) expression -> . expression EQ expression
    (68) expression -> . expression NEQ expression
    (69) expression -> . expression > expression
    (70) expression -> . expression < expression
    (71) expression -> . expression LE expression
    (72) expression -> . expression GE expression
    (73) expression -> . ( expression )
    (74) expression -> . ( error )
    (75) expression -> . ID ( expr_list_or_empty )
    (76) expression -> . ID ( error )
    (47) const -> . integer
    (48) const -> . float
    (49) const -> . string
    (50) integer -> . INTEGER
    (51) float -> . FLOAT
    (52) string -> . STRING

    ID              shift and go to state 37
    (               shift and go to state 14
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 3
    STRING          shift and go to state 7

    const                          shift and go to state 13
    string                         shift and go to state 20
    float                          shift and go to state 5
    integer                        shift and go to state 8
    expression                     shift and go to state 38

state 5

    (48) const -> float .

    ;               reduce using rule 48 (const -> float .)
    +               reduce using rule 48 (const -> float .)
    -               reduce using rule 48 (const -> float .)
    *               reduce using rule 48 (const -> float .)
    /               reduce using rule 48 (const -> float .)
    %               reduce using rule 48 (const -> float .)
    |               reduce using rule 48 (const -> float .)
    &               reduce using rule 48 (const -> float .)
    ^               reduce using rule 48 (const -> float .)
    AND             reduce using rule 48 (const -> float .)
    OR              reduce using rule 48 (const -> float .)
    SHL             reduce using rule 48 (const -> float .)
    SHR             reduce using rule 48 (const -> float .)
    EQ              reduce using rule 48 (const -> float .)
    NEQ             reduce using rule 48 (const -> float .)
    >               reduce using rule 48 (const -> float .)
    <               reduce using rule 48 (const -> float .)
    LE              reduce using rule 48 (const -> float .)
    GE              reduce using rule 48 (const -> float .)
    ,               reduce using rule 48 (const -> float .)
    )               reduce using rule 48 (const -> float .)


state 6

    (18) instruction -> choice_instr .

    TYPE            reduce using rule 18 (instruction -> choice_instr .)
    error           reduce using rule 18 (instruction -> choice_instr .)
    PRINT           reduce using rule 18 (instruction -> choice_instr .)
    ID              reduce using rule 18 (instruction -> choice_instr .)
    IF              reduce using rule 18 (instruction -> choice_instr .)
    WHILE           reduce using rule 18 (instruction -> choice_instr .)
    REPEAT          reduce using rule 18 (instruction -> choice_instr .)
    RETURN          reduce using rule 18 (instruction -> choice_instr .)
    BREAK           reduce using rule 18 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 18 (instruction -> choice_instr .)
    {               reduce using rule 18 (instruction -> choice_instr .)
    (               reduce using rule 18 (instruction -> choice_instr .)
    INTEGER         reduce using rule 18 (instruction -> choice_instr .)
    FLOAT           reduce using rule 18 (instruction -> choice_instr .)
    STRING          reduce using rule 18 (instruction -> choice_instr .)
    $end            reduce using rule 18 (instruction -> choice_instr .)
    UNTIL           reduce using rule 18 (instruction -> choice_instr .)
    }               reduce using rule 18 (instruction -> choice_instr .)
    ELSE            reduce using rule 18 (instruction -> choice_instr .)


state 7

    (52) string -> STRING .

    +               reduce using rule 52 (string -> STRING .)
    -               reduce using rule 52 (string -> STRING .)
    *               reduce using rule 52 (string -> STRING .)
    /               reduce using rule 52 (string -> STRING .)
    %               reduce using rule 52 (string -> STRING .)
    |               reduce using rule 52 (string -> STRING .)
    &               reduce using rule 52 (string -> STRING .)
    ^               reduce using rule 52 (string -> STRING .)
    AND             reduce using rule 52 (string -> STRING .)
    OR              reduce using rule 52 (string -> STRING .)
    SHL             reduce using rule 52 (string -> STRING .)
    SHR             reduce using rule 52 (string -> STRING .)
    EQ              reduce using rule 52 (string -> STRING .)
    NEQ             reduce using rule 52 (string -> STRING .)
    >               reduce using rule 52 (string -> STRING .)
    <               reduce using rule 52 (string -> STRING .)
    LE              reduce using rule 52 (string -> STRING .)
    GE              reduce using rule 52 (string -> STRING .)
    ;               reduce using rule 52 (string -> STRING .)
    ,               reduce using rule 52 (string -> STRING .)
    )               reduce using rule 52 (string -> STRING .)


state 8

    (47) const -> integer .

    ;               reduce using rule 47 (const -> integer .)
    +               reduce using rule 47 (const -> integer .)
    -               reduce using rule 47 (const -> integer .)
    *               reduce using rule 47 (const -> integer .)
    /               reduce using rule 47 (const -> integer .)
    %               reduce using rule 47 (const -> integer .)
    |               reduce using rule 47 (const -> integer .)
    &               reduce using rule 47 (const -> integer .)
    ^               reduce using rule 47 (const -> integer .)
    AND             reduce using rule 47 (const -> integer .)
    OR              reduce using rule 47 (const -> integer .)
    SHL             reduce using rule 47 (const -> integer .)
    SHR             reduce using rule 47 (const -> integer .)
    EQ              reduce using rule 47 (const -> integer .)
    NEQ             reduce using rule 47 (const -> integer .)
    >               reduce using rule 47 (const -> integer .)
    <               reduce using rule 47 (const -> integer .)
    LE              reduce using rule 47 (const -> integer .)
    GE              reduce using rule 47 (const -> integer .)
    ,               reduce using rule 47 (const -> integer .)
    )               reduce using rule 47 (const -> integer .)


state 9

    (26) print_instr -> PRINT . expr_list ;
    (27) print_instr -> PRINT . error ;
    (79) expr_list -> . expr_list , expression
    (80) expr_list -> . expression
    (53) expression -> . ID
    (54) expression -> . const
    (55) expression -> . expression + expression
    (56) expression -> . expression - expression
    (57) expression -> . expression * expression
    (58) expression -> . expression / expression
    (59) expression -> . expression % expression
    (60) expression -> . expression | expression
    (61) expression -> . expression & expression
    (62) expression -> . expression ^ expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression OR expression
    (65) expression -> . expression SHL expression
    (66) expression -> . expression SHR expression
    (67) expression -> . expression EQ expression
    (68) expression -> . expression NEQ expression
    (69) expression -> . expression > expression
    (70) expression -> . expression < expression
    (71) expression -> . expression LE expression
    (72) expression -> . expression GE expression
    (73) expression -> . ( expression )
    (74) expression -> . ( error )
    (75) expression -> . ID ( expr_list_or_empty )
    (76) expression -> . ID ( error )
    (47) const -> . integer
    (48) const -> . float
    (49) const -> . string
    (50) integer -> . INTEGER
    (51) float -> . FLOAT
    (52) string -> . STRING

    error           shift and go to state 40
    ID              shift and go to state 37
    (               shift and go to state 14
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 3
    STRING          shift and go to state 7

    string                         shift and go to state 20
    expr_list                      shift and go to state 39
    float                          shift and go to state 5
    integer                        shift and go to state 8
    expression                     shift and go to state 41
    const                          shift and go to state 13

state 10

    (34) while_instr -> WHILE . ( condition ) instruction
    (35) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 42


state 11

    (20) instruction -> repeat_instr .

    TYPE            reduce using rule 20 (instruction -> repeat_instr .)
    error           reduce using rule 20 (instruction -> repeat_instr .)
    PRINT           reduce using rule 20 (instruction -> repeat_instr .)
    ID              reduce using rule 20 (instruction -> repeat_instr .)
    IF              reduce using rule 20 (instruction -> repeat_instr .)
    WHILE           reduce using rule 20 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 20 (instruction -> repeat_instr .)
    RETURN          reduce using rule 20 (instruction -> repeat_instr .)
    BREAK           reduce using rule 20 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 20 (instruction -> repeat_instr .)
    {               reduce using rule 20 (instruction -> repeat_instr .)
    (               reduce using rule 20 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 20 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 20 (instruction -> repeat_instr .)
    STRING          reduce using rule 20 (instruction -> repeat_instr .)
    $end            reduce using rule 20 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 20 (instruction -> repeat_instr .)
    }               reduce using rule 20 (instruction -> repeat_instr .)
    ELSE            reduce using rule 20 (instruction -> repeat_instr .)


state 12

    (21) instruction -> return_instr .

    TYPE            reduce using rule 21 (instruction -> return_instr .)
    error           reduce using rule 21 (instruction -> return_instr .)
    PRINT           reduce using rule 21 (instruction -> return_instr .)
    ID              reduce using rule 21 (instruction -> return_instr .)
    IF              reduce using rule 21 (instruction -> return_instr .)
    WHILE           reduce using rule 21 (instruction -> return_instr .)
    REPEAT          reduce using rule 21 (instruction -> return_instr .)
    RETURN          reduce using rule 21 (instruction -> return_instr .)
    BREAK           reduce using rule 21 (instruction -> return_instr .)
    CONTINUE        reduce using rule 21 (instruction -> return_instr .)
    {               reduce using rule 21 (instruction -> return_instr .)
    (               reduce using rule 21 (instruction -> return_instr .)
    INTEGER         reduce using rule 21 (instruction -> return_instr .)
    FLOAT           reduce using rule 21 (instruction -> return_instr .)
    STRING          reduce using rule 21 (instruction -> return_instr .)
    $end            reduce using rule 21 (instruction -> return_instr .)
    UNTIL           reduce using rule 21 (instruction -> return_instr .)
    }               reduce using rule 21 (instruction -> return_instr .)
    ELSE            reduce using rule 21 (instruction -> return_instr .)


state 13

    (54) expression -> const .

    +               reduce using rule 54 (expression -> const .)
    -               reduce using rule 54 (expression -> const .)
    *               reduce using rule 54 (expression -> const .)
    /               reduce using rule 54 (expression -> const .)
    %               reduce using rule 54 (expression -> const .)
    |               reduce using rule 54 (expression -> const .)
    &               reduce using rule 54 (expression -> const .)
    ^               reduce using rule 54 (expression -> const .)
    AND             reduce using rule 54 (expression -> const .)
    OR              reduce using rule 54 (expression -> const .)
    SHL             reduce using rule 54 (expression -> const .)
    SHR             reduce using rule 54 (expression -> const .)
    EQ              reduce using rule 54 (expression -> const .)
    NEQ             reduce using rule 54 (expression -> const .)
    >               reduce using rule 54 (expression -> const .)
    <               reduce using rule 54 (expression -> const .)
    LE              reduce using rule 54 (expression -> const .)
    GE              reduce using rule 54 (expression -> const .)
    ;               reduce using rule 54 (expression -> const .)
    ,               reduce using rule 54 (expression -> const .)
    )               reduce using rule 54 (expression -> const .)


state 14
